--- a/style.css
+++ b/style.css
@@ -296,6 +296,7 @@ footer{
     height: 450px;
     width: 100%;
     background-color: #070211;
+    margin-top: 40px;
 }
 .f_one{
     color:#fff;
